[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = [
    # Line too long
    "E501",
]

[tool.mypy]
strict = false
disallow_untyped_calls = false
allow_redefinition = true
no_implicit_reexport = false

[project]
name = "algo-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "mypy>=1.14.1",
    "ruff>=0.9.2",
]
